fix: remove buttons blue highlight on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -60,6 +60,8 @@
   --type-fairy: #ec8fe6;
   --type-default: transperent;
 
+  
+
 }
 
 * { 
@@ -83,6 +85,14 @@ button {
 
 ul {
   list-style: none;
+}
+
+input,
+textarea,
+button,
+select,
+a {
+    -webkit-tap-highlight-color: transparent;
 }
 
 /* scroll */
@@ -134,6 +144,7 @@ ul {
 
 #root {
   max-width: 1280px;
-  margin: 0 auto;
+  min-width: 360px;
+  width: 100%;
   text-align: center;
 }
